--- a/JsTableTask/asset/css/main.css
+++ b/JsTableTask/asset/css/main.css
@@ -1,15 +1,19 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-.container{
+.container {
     display: flex;
     justify-content: center;
 }
 
-.w-70{
+.justify-content-spacebetween {
+    justify-content: space-between;
+}
+
+.w-70 {
     width: 70%;
 }
 
@@ -35,9 +39,10 @@
     text-align: center;
 }
 
-.table-design tr{
+.table-design tr {
     position: relative;
 }
+
 .btn {
     margin-top: 1%;
     padding: 8px 40px;
@@ -76,7 +81,8 @@
     width: 40%;
 }
 
-.close {
+.close,
+.closeDelModal {
     color: #aaa;
     float: right;
     font-size: 28px;
@@ -84,7 +90,9 @@
 }
 
 .close:hover,
-.close:focus {
+.closeDelModal:hover,
+.close:focus,
+.closeDelModal:focus {
     color: black;
     text-decoration: none;
     cursor: pointer;
@@ -98,46 +106,52 @@
     flex-direction: column;
 }
 
-form input{
-    padding: 8px 15px; 
+form input {
+    padding: 8px 15px;
 }
 
-form input,label{
+form input,
+label {
     margin-top: 1%;
 }
 
-.mt-3{
+.mt-3 {
     margin-top: 3% !important;
 }
 
-.mt-2{
+.mt-2 {
     margin-top: 2% !important;
 }
 
-.mb-1{
+.mb-1 {
     margin-bottom: 1% !important;
 }
 
-.mt-1{
-    margin-top: 1%;;
+.mt-1 {
+    margin-top: 1%;
+    ;
 }
 
-.d-none{
+.d-none {
     display: none;
 }
 
 
-.text-danger{
+.text-danger {
     color: red;
 }
 
-h1{
+.bg-danger {
+    background-color: red;
+}
+
+h1 {
     text-transform: uppercase;
     font-weight: lighter;
     color: #ff0000;
 }
 
 
-.visibilityy{
+.visibilityy {
     display: none;
 }
